
<resources>
    <string name="app_name">BinCapture</string>
    <string name="scan_bin">Scan Bin</string>
    <string name="scan_upc">Scan UPC</string>
    <string name="import_items">Import Items</string>
    <string name="export_csv">Export CSV</string>
    <string name="save_record">Save</string>
    <string name="view_records">Records</string>
    <string name="qty">Quantity</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="search_items">Search items</string>
    <string name="select_file">Select Item File</string>
    <string name="username">User</string>
    <string name="set_username">Set User</string>
</resources>
